Fixé erreur typographie README + fix erreur compilation LaTeX

--- a/calculabilite_INGI1123.tex
+++ b/calculabilite_INGI1123.tex
@@ -6,7 +6,7 @@
 \begin{document}
  
 %------------------------------------------------------
-\input{00_title.tex}
+\input{00_Title.tex}
 \pagebreak
 \input{00_Preambule}
 \pagebreak
