Issue#1: en partie faite + corr label
Issue#1 en partie faite, verifier exemples et/ou en ajouter de nouveaux. Correction style et fautes d'ortho/grammaires.
Correction des labels, sec->ch subsec->sec ssub->subsec

--- a/01_Introduction.tex
+++ b/01_Introduction.tex
@@ -2,13 +2,16 @@
 % ============
 
 \chapter{Introduction}
-\label{sec:introduction}
+\label{ch:introduction}
+
+\section{Qu'est-ce que la calculabilité}
+\label{sec:qu_est-ce_la_calculabilite}
 
 \paragraph{}
 La calculabilité c'est l'étude des limites de l'informatique. Il faut bien
 faire attention à faire la différence entre les limites théoriques et les limites
-pratiques. Pour la calculabilité, on s'occupe des limites théoriques.
-Alors que pour la complexité on s'occupe des limites pratiques. La complexité
+pratiques. Pour la calculabilité, on s'occupe des limites théoriques alors que pour 
+la complexité on s'occupe des limites pratiques. La complexité
 détermine la frontière entre ce qui est faisable en pratique et infaisable en pratique.
 La question principale de la calculabilité est: ``quels sont les problèmes qui peuvent
 être résolus par un programme?''. La caractéristique de calculabilité ne donne aucune autre information sur le programme que son existence.
@@ -22,12 +25,19 @@ De plus, on est conscient de sa complexité intrinsèque d'un
 problème.
 % paragraph  (end)
 
+\subsection{Exemples de limites}
+\label{subsec:exemples_limites}
+
+Des limites existent dans bien d'autres domaines que l'informatique. 
+Par exemple dans plusieurs champs de la physique, on retrouve les lois de la thermodynamique dans ce rôle. En effet on ne peut créer de l'énergie à partir de rien.
+
+En biologie, les lois de Mendel forment une limite. Un individu ne peut recevoir d'autres gènes que ceux de sa propre famille. %Verifier si c'est bien pertinent
 
 \section{Notion de problème}
-\label{subsec:notion_de_probl_me}
+\label{sec:notion_de_probl_me}
 
 \paragraph{}
-Premièrement, on doit parler la notion de problème.
+Premièrement, on doit parler de la notion de problème.
 Attention, il ne faut pas confondre un problème avec un programme.
 Les caractéristiques d'un problème sont:
 
@@ -41,7 +51,7 @@ la description d'un problème est équivalente à la description d'une fonction.
 % subsection notion_de_probl_me (end)
 
 \section{Notion de programme}
-\label{ssub:notion_de_programme}
+\label{sec:notion_de_programme}
 
 Un programme est une ``procédure effective'', c'est-à-dire exécutable par une machine.
 Il existe plein de formalismes permettant la description de ``procédure effective''.
@@ -49,7 +59,7 @@ Il existe plein de formalismes permettant la description de ``procédure effecti
 % subsection notion_de_programme (end)
 
 \subsection{Résultats principaux}
-\label{sub:r_sultat_principaux}
+\label{subsec:r_sultat_principaux}
 
 \begin{itemize}
 	\item Équivalence des langages de programmation (complets).
@@ -67,7 +77,7 @@ Il existe plein de formalismes permettant la description de ``procédure effecti
 % subsection r_sultat_principaux (end)
 
 \section{Détection de virus}
-\label{sub:d_tection_de_virus}
+\label{sec:d_tection_de_virus}
 On veut déterminer si un programme P avec une entrée D est nuisible.
 
 Spécification du programme detecteur(P,D):\\
