--- a/01_Introduction.tex
+++ b/01_Introduction.tex
@@ -12,26 +12,30 @@ La calculabilité c'est l'étude des limites de l'informatique. Il faut bien
 faire attention à faire la différence entre les limites théoriques et les limites
 pratiques. Pour la calculabilité, on s'occupe des limites théoriques alors que pour 
 la complexité on s'occupe des limites pratiques. La complexité
-détermine la frontière entre ce qui est faisable en pratique et infaisable en pratique.
+détermine la frontière entre ce qui est faisable et infaisable en pratique.
 La question principale de la calculabilité est: ``quels sont les problèmes qui peuvent
-être résolus par un programme?''. La caractéristique de calculabilité ne donne aucune autre information sur le programme que son existence.
+être résolus par un programme?''. La caractéristique de calculabilité ne donne aucune 
+autre information sur le programme que de la preuve de son existence.
 
 \paragraph{} Le but est donc de tracer des frontières entre les programmes calculables,
 non calculables et non calculables en pratique.
 
 \paragraph{}
 Cela nous permet de savoir quand ça ne sert à rien d'essayer de résoudre un problème.
-De plus, on est conscient de sa complexité intrinsèque d'un
-problème.
+De plus, on est conscient de la complexité intrinsèque d'un problème.
 % paragraph  (end)
 
 \subsection{Exemples de limites}
 \label{subsec:exemples_limites}
 
-Des limites existent dans bien d'autres domaines que l'informatique. 
-Par exemple dans plusieurs champs de la physique, on retrouve les lois de la thermodynamique dans ce rôle. En effet on ne peut créer de l'énergie à partir de rien.
+De nombreuses limites existent en informatique, par exemple il est impossible de déterminer quand un programme se termine. Ou bien on ne peut pas déterminer qu'un programme est écrit sans bugs.
 
-En biologie, les lois de Mendel forment une limite. Un individu ne peut recevoir d'autres gènes que ceux de sa propre famille. %Verifier si c'est bien pertinent
+Mais des limites existent dans bien d'autres domaines que l'informatique. 
+Par exemple dans plusieurs champs de la physique, on retrouve les lois de la 
+thermodynamique dans ce rôle. En effet on ne peut créer de l'énergie à partir de rien.
+
+En biologie, les lois de Mendel forment une limite. Un individu ne peut recevoir 
+d'autres gènes que ceux de sa propre famille. %Verifier si c'est bien pertinent
 
 \section{Notion de problème}
 \label{sec:notion_de_probl_me}
