--- a/01_Introduction.tex
+++ b/01_Introduction.tex
@@ -53,32 +53,29 @@ Il existe plein de formalismes permettant la description de ``procédure effecti
 \section{Résultats principaux}
 \label{sub:r_sultat_principaux}
 
-\begin{itemize}
-	\item Équivalence des langages de programmation (complets).
-	\newline Il a t-il de langage de programmation qui sont plus puissantes que d'autres ?
-	\newline Il a des langages qui sont équivalents ? 
+	\subsection{ Équivalence des langages de programmation}
+	 Il a t-il de langage de programmation qui sont plus puissantes que d'autres ?  Il a des langages qui sont équivalents ? 
 	\newline Il y a une équivalence entre langages en termes de calculabilité quand un problème qui peut être résolu par un de ces langages peut être résolu par n'importe lequel autre.   
 S'il existe un programme Java qui résoudre un problème il existera aussi un programme C/C++, PHP, … qui peut résoudre le même problème, on peut dire qu'il existe une équivalence théorique.\\
  D'un point de vue théorique ce langages s'appellent des langages complets, complet ça veut dire qu'il permet tous de résoudre le même problème donc le problème calculable à ces langages sont tous le même.\\
 D'un point de vue pratique on peut voir des différences (le programme sera plus court, s'écrire plus rapidement, le programme sera plus rapide, plus propre, plus fiable et encore d'autres critères) c'est le langage le plus adapté qui aura un avantage. 
 
 
-	\item Problème non calculable : il existe des problèmes qui ne peuvent
+	\subsection{Existence de problèmes non calculables}
+	Problème non calculable : il existe des problèmes qui ne peuvent
 		être résolus par un programme. Ex:
         détection de virus,
         équivalence de programme,
         déterminer si un polynôme à coefficients entiers à des racines entières, ...
-	\item Problème intrinsèquement complexe. (Voir complexité) Les problèmes
-		qui ont une complexité supérieure ou égale à l'exponentielle. Dans
-		ce cas, même l'amélioration des ordinateurs n'influence presque pas
-		la taille de l'entrée possible.
-\end{itemize}
+	
 
 % section r_sultat_principaux (end)
 
-\section{Détection de virus}
+\subsubsection{Détection de virus}
 \label{sub:d_tection_de_virus}
 On veut déterminer si un programme P avec une entrée D est nuisible.
+
+Être nuisible: Un programme est nuisible s'il va contaminer un autre programme, le programme va se recopier autre part.  
 
 Spécification du programme detecteur(P,D):\\
 \textbf{Préconditions :} un programme P et une donnée D\\
@@ -119,6 +116,12 @@ On a donc une contradiction dans tous les cas ce qui implique que le programme \
 exister, ce qui implique que le programme detecteur non plus.
 % paragraph  (end)
 % subsection d_tection_de_virus (end)
+
+\subsection{ Existence de problèmes intrinsèquement complexes}
+	Problème intrinsèquement complexe. (Voir complexité) Les problèmes
+		qui ont une complexité supérieure ou égale à l'exponentielle. Dans
+		ce cas, même l'amélioration des ordinateurs n'influence presque pas
+		la taille de l'entrée possible.
 
 % section introduction (end)Introduction
 
