https://github.com/UCL-INGI/LINGI1123-Calculabilite/issues/5
problème intrinsèquement complexe+ exemple.

--- a/01_Introduction.tex
+++ b/01_Introduction.tex
@@ -75,7 +75,7 @@ D'un point de vue pratique on peut voir des différences (le programme sera plus
 \label{sub:d_tection_de_virus}
 On veut déterminer si un programme P avec une entrée D est nuisible.
 
-Être nuisible: Un programme est nuisible s'il va contaminer un autre programme, le programme va se recopier autre part.  
+\textbf{Être nuisible:} Un programme est dit nuisible si son exécution a pour effet de contaminer d'autres programme, le programme va se recopier autre part. 
 
 Spécification du programme detecteur(P,D):\\
 \textbf{Préconditions :} un programme P et une donnée D\\
@@ -119,9 +119,7 @@ exister, ce qui implique que le programme detecteur non plus.
 
 \subsection{ Existence de problèmes intrinsèquement complexes}
 	Problème intrinsèquement complexe. (Voir complexité) Les problèmes
-		qui ont une complexité supérieure ou égale à l'exponentielle. Dans
-		ce cas, même l'amélioration des ordinateurs n'influence presque pas
-		la taille de l'entrée possible.
+		qui ont une complexité supérieure ou égale à l'exponentielle. Peu importe les évolutions technologiques, un problème exponentiel ne peut et ne pourra être résolu que pour de petite taille, par exemple le problème du voyageur de commerce. 
 
 % section introduction (end)Introduction
 
