https://github.com/UCL-INGI/LINGI1123-Calculabilite/issues/6
schéma des problèmes calculables / non calculables
+ explications
+ l'intérêt de la calculabilité et de la complexité.

--- a/01_Introduction.tex
+++ b/01_Introduction.tex
@@ -120,6 +120,19 @@ exister, ce qui implique que le programme detecteur non plus.
 \subsection{ Existence de problèmes intrinsèquement complexes}
 	Problème intrinsèquement complexe. (Voir complexité) Les problèmes
 		qui ont une complexité supérieure ou égale à l'exponentielle. Peu importe les évolutions technologiques, un problème exponentiel ne peut et ne pourra être résolu que pour de petite taille, par exemple le problème du voyageur de commerce. 
+		
+\section{Objectifs calculabilité et complexité}
+
+A la Fig(\ref{cal_non_cal}) on voit qu'il a une frontière entre les problème non calculables (il n'existe pas un programme) et calculables (il existe un programme),  dans les calculables il a ceux qui sont calculables en pratiques (pas exponentiel) et puis ce qui ne sont pas calculables en pratique. 
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.55\textwidth]{Images/Problemes_calculables_et_non_calculables.png}
+  \caption{ Problèmes calculables / non calculables }
+  \label{cal_non_cal}
+\end{figure}
+
+L'intérêt de la calculabilité est de savoir quel problème sont calculables ou pas et donc ne pas essayer de résoudre un problème non calculable. S'il le problème est calculable il faut analyser la complexité pour savoir s'il y a une solution pratique pour la taille de mon problème. 
 
 % section introduction (end)Introduction
 
