Correction d'orthographe + image en tikz + quelques ajouts.

--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -59,6 +59,9 @@ version={4.0},
 \usepackage{algorithm}
 \usepackage{algorithmic}
 
+\usepackage{tikz}
+\usetikzlibrary{shapes}
+
 %\usepackage[latin1]{inputenc}    % Pour utiliser les lettres accentuées
 %\usepackage[francais]{babel}    % Pour la langue française
 
@@ -96,7 +99,7 @@ version={4.0},
   keywordstyle=\bfseries\color{dkred},
   frame=single,
   commentstyle=\color{gray}=small,
-  stringstyle=\color{dkgreen},
+  stringstyle=\color{dkred},
   %backgroundcolor=\color{gray!10},
   %tabsize=2,
   rulecolor=\color{black!30},
