Proposition Issue #9 + quelques corrections et ajouts sur section 2.1

--- a/01_Introduction.tex
+++ b/01_Introduction.tex
@@ -88,7 +88,7 @@ On veut déterminer si un programme P avec une entrée D est nuisible.
 
 \textbf{Être nuisible:} Un programme est dit nuisible si son exécution a pour effet de contaminer d'autres programmes (par exemple le programme va se recopier autre part). 
 
-Spécification du programme detecteur(P,D):\\
+Spécification du programme \textit{detecteur(P,D)}:\\
 \textbf{Préconditions :} un programme P et une donnée D\\
 \textbf{Postconditions :} ``Mauvais'' si P(D) est nuisible,
 		``Bon'' sinon.
@@ -96,6 +96,7 @@ Il faut aussi que detecteur ne soit pas nuisible.
 
 On va créer un programme drole(P) et essayer de détecter s’il est nuisible.
 
+\label{lst:detecteur_de_virus}
 \begin{lstlisting}
 drole(P)
 if detecteur(P,P) = ``Mauvais''
