--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -279,6 +279,33 @@ suite de chiffre $x_{ki}$ : $x_k = 0.x_{k0}x_{k1}\dots x_{kk}\dots$.
 \end{enumerate}
 % subsection cantor (end)
 
+\subsection{Au delà du non énumérable}
+\label{subsec:au_dela_du_non_enumerable}
+On a d'abord parlé d'ensembles finis, ensuite nous avons introduit le concept d'infini 
+énumérable qui est plus grand que tous les ensembles finis. Mais il existe plus grand 
+que l'infini énumérable, comme on vient de le démontrer il existe des ensembles infinis 
+non énumérables. Est-ce que on s'arête là ou peut-on encore aller plus loin?
+
+Les mathématiciens ont décidés de continuer à chercher plus grand et pour ça, ils ont 
+définit l'ensemble des ensembles non énumérables. Et ils ont démontré qu'il était plus 
+grand que les ensembles non énumérables. On peut prendre pour exemple l'ensembles des 
+ensembles contenant un nombre non énumérables de réels. On peut noter l'ensemble de ces 
+ensembles $2^{\R}$. Il peut également être vu comme l'ensemble des fonctions qui 
+prennent un entier en entrée et qui donnent un entier en sortie.
+
+Et ce n'est pas tout, les mathématiciens ont définit la notation $2^{\R}$ pour 
+cet ensemble mais pourquoi pas prendre un ensemble qui serait l'union de tous ses 
+sous-ensembles? On le note $2^{2^{\R}}$ (On peut voir cet ensemble comme toutes 
+les ``fonctions'' qui prennent une fonction en entrée et qui donnent une fonction en 
+sortie). Et on peut monter aussi haut que l'on veut comme ceci.
+
+On peut ainsi schématiser la taille des ensembles comme ceci:
+$$\Phi < \{1,2,3\} < \N < \R < 2^{\R} < 2^{2^{\R}} < 2^{2^{2^{\R}}} \dots$$
+
+Est-ce qu'il existe encore plus grand? Oui, effectivement, l'union de tous ces ensembles 
+est plus grand que chacun de ces ensembles.
+
+
 \section{Conclusion}
 
 Les ensembles énumérables sont importants pour la suite du cours et aussi, car en
