--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -143,9 +143,9 @@ ont le même cardinal s’il existe une bijection entre eux.
 \end\{myprop}
 
 \begin{myprop}
- L'ensemble des fonctions de {0, 1} vers N est énumérable.
+ L'ensemble des fonctions de  $\{0, 1\}$ vers N est énumérable.
  \begin{proof}
-  Une fonction de {0, 1} vers N peut être représentée par deux couples de quatre entiers, donc est un quadruple. L'ensemble des    fonctions de {0, 1} vers N est ensemble des quadruples et est donc énumérable.
+  Une fonction de $\{0, 1\}$ vers N peut être représentée par deux couples de quatre entiers, donc est un quadruple. L'ensemble des fonctions de $\{0, 1\}$ vers N est ensemble des quadruples et est donc énumérable.
  \end{proof}
 \end\{myprop}
 
