--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -141,28 +141,28 @@ ont le même cardinal s’il existe une bijection entre eux.
  \begin{proof}
   Si dans un ensemble infini de caractères ont prend un ensemble fini de chaines de caractères, cet ensemble est énumérable. 
  \end{proof}
-\end\{myprop}
+\end{myprop}
 
 \begin{myprop}
  L'ensemble des programmes java est énumérable.
  \begin{proof}
   Java est constitué d'un ensemble fini de chaine de caractères et est donc énumérable.
  \end{proof}
-\end\{myprop}
+\end{myprop}
 
 \begin{myprop}
  L'ensemble des fonctions de  $\{0, 1\}$ vers N est énumérable.
  \begin{proof}
   Une fonction de $\{0, 1\}$ vers N peut être représentée par deux couples de quatre entiers, donc est un quadruple. L'ensemble des fonctions de $\{0, 1\}$ vers N est ensemble des quadruples et est donc énumérable.
  \end{proof}
-\end\{myprop}
+\end{myprop}
 
 \begin{myprop}
  L'ensemble des fonctions calculable est énumérable.
  \begin{proof}
   Une fonction calculable est une fonction pour laquelle il existe un programme pour le résoudre et est donc énumérable.
  \end{proof}
-\end\{myprop}
+\end{myprop}
 
 \begin{myprop}
  Tout language(avec un alphabet fini) est énumerable. 
@@ -170,7 +170,7 @@ ont le même cardinal s’il existe une bijection entre eux.
  Ont sais que un ensemble est énumérable ou dénombrable s'il est fini ou s'il a le même cardinal que $\mathbb{\N}$. \\
  Un language est un ensemble de chaine de caractères fini donc est énumerable.
  \end{proof}
-\end\{myprop}
+\end{myprop}
 
 L'union d'une infinité non-énumérable d'ensembles énumérable peut ne pas être énumérable.
 Par exemple, l'union des singletons $\{x\}$ pour tout réel $x$ forme l'ensemble des réels $\R$ qui n'est pas énumérable:
